--- a/IntelPlayer/MainWindow.xaml
+++ b/IntelPlayer/MainWindow.xaml
@@ -1,7 +1,7 @@
-﻿<Window x:Class="WpfTutorialSamples.Audio_and_Video.MediaPlayerAudioControlSample"
+﻿<Window x:Name="IntelPlayer" x:Class="WpfTutorialSamples.Audio_and_Video.MediaPlayerAudioControlSample"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MediaPlayerAudioControlSample" Height="460.354" Width="899.409">
+        Title="IntelPlayer" Height="460.354" Width="899.409">
     <StackPanel Margin="10">
         <Label x:Name="lblStatus" Content="Not playing..." HorizontalContentAlignment="Center" Margin="5" />
         <WrapPanel HorizontalAlignment="Center">
@@ -10,5 +10,7 @@
             <Button x:Name="btnStop" Click="btnStop_Click" Content="Stop"/>
             <Button x:Name="btnOpen" Margin ="5,0" Click="btnOpen_Click" Content="Ouvrir" />
         </WrapPanel>
+        <Label x:Name="Label1" Content="Liste de morceaux" Margin="22,0,736,0"/>
+        <ListBox x:Name="listBox" Height="304" Margin="0,0,518,0" HorizontalAlignment="Right" Width="331" SelectionChanged="listBox_SelectionChanged"/>
     </StackPanel>
 </Window>
