--- a/IntelPlayer/MainWindow.xaml
+++ b/IntelPlayer/MainWindow.xaml
@@ -1,16 +1,22 @@
 ﻿<Window x:Name="IntelPlayer" x:Class="WpfTutorialSamples.Audio_and_Video.MediaPlayerAudioControlSample"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="IntelPlayer" Height="460.354" Width="899.409">
-    <StackPanel Margin="10">
-        <Label x:Name="lblStatus" Content="Not playing..." HorizontalContentAlignment="Center" Margin="5" />
-        <WrapPanel HorizontalAlignment="Center">
-            <Button x:Name="btnPlay" Click="btnPlay_Click" Content="Play"/>
+        Title="IntelPlayer" Height="519.642" Width="899.409">
+    <StackPanel Margin="10" RenderTransformOrigin="0.503,0.508">
+        <ToolBar>
+            <Button Command="New" Content="New" />
+            <Button Command="Open" Content="Open" />
+            <Button Command="Save" Content="Save" />
+        </ToolBar>
+        <Label x:Name="lblStatus" HorizontalContentAlignment="Center" Margin="5" Height="36" Content="Preparation" />
+        <WrapPanel x:Name="q_q_" HorizontalAlignment="Center">
+            <Button x:Name="btnPlay" Click="btnPlay_Click" Content="Jouer"/>
             <Button x:Name="btnPause" Margin="5,0" Click="btnPause_Click" Content="Pause"/>
             <Button x:Name="btnStop" Click="btnStop_Click" Content="Stop"/>
             <Button x:Name="btnOpen" Margin ="5,0" Click="btnOpen_Click" Content="Ouvrir" />
         </WrapPanel>
+        <Slider x:Name="slider" Height="22" VerticalAlignment="Bottom" RenderTransformOrigin="30.3,8.841" Margin="0"/>
         <Label x:Name="Label1" Content="Liste de morceaux" Margin="22,0,736,0"/>
-        <ListBox x:Name="listBox" Height="304" Margin="0,0,518,0" HorizontalAlignment="Right" Width="331" SelectionChanged="listBox_SelectionChanged"/>
+        <ListBox x:Name="listBox" Height="244" Margin="0,0,518,0" HorizontalAlignment="Right" Width="331" SelectionChanged="listBox_SelectionChanged"/>
     </StackPanel>
 </Window>
